# git-semantic

./: BENCHMARK_MAP.md  BENCHMARK_PAPER.md  BENCHMARK_TASKS.md  CLAUDE.md  Cargo.toml  FINDINGS.md  README.md  STATE_OF_THE_ART.md  index.html
.github/workflows/: release.yml
28/60/74/: activity.json
87/50/dd/: activity.json  endorsements.json
e5/ce/bc/: activity.json
scripts/: analyze.py  collect_metrics.py  orientation.py
src/: audit.rs  clustering.rs  cognitive_debt.rs  db.rs  embed.rs  git.rs  main.rs  map.rs  models.rs  semantic_branch.rs
src/chunking/: languages.rs  mod.rs  parser.rs
src/embeddings/: config.rs  gemma.rs  mod.rs  onnx.rs  openai.rs
