[package]
name = "git-semantic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
clap = { version = "4.6.0", features = ["derive"] }
gix = "0.81.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.6"
walkdir = "2.5.0"
zerocopy = "0.8.14"
